--- a/platformgame.html
+++ b/platformgame.html
@@ -4,6 +4,7 @@
         <title>Tzuuu</title>
         <link rel="stylesheet" type="text/css" href="CSS/style.css" />
         <link href="IMAGES/favicon.ico" rel="icon" type="image/x-icon" />
+        <script src="JAVASCRIPT/game.js"></script>
     </head>
 
     <body id = "body" >
@@ -16,209 +17,6 @@
         </div>
 
         <button onclick = "displayHelp();" id = "demo">HELP</button>
-
-        <script type="text/javascript">
-
-        window.onload = play();
-
-        function play() {
-        var ok = 50;
-            var sndJump = new Audio("AUDIO/Tzu_Jump.mp3"); 
-            var theme = new Audio("AUDIO/Tzu_Theme.mp3") ;
-            var death = new Audio("AUDIO/Tzu_Death.mp3") ;
-            var victory = new Audio("AUDIO/Tzu_Victory_Dance_of_the_Penguin.mp3") ;
-        	theme.play();
-            var gameCanvas = document.getElementById("graphics");
-            var victoryPenguin = document.getElementById("victory-penguin");
-            var grafx = gameCanvas.getContext("2d");
-            var player = new Object("IMAGES/player.png", 100, 100, 32, 31);
-            var minY = 150;
-            var maxY = 350;
-                var invisibleX = -1000;
-                var maxBlocks = 10;
-            var block = new Array ();
-            gameCanvas.style.display = "block";
-            victoryPenguin.style.display = "none";
-
-            for(var i = 0; i < 4; i++) 
-                block[i] = new Object('IMAGES/block.jpg', i * 32 + 100, maxY, 32, 31);
-
-            for(var i = 4; i < maxBlocks; ++i) {
-                var new_x = i * 32 + 100;    
-                var new_y = minY + (block[i - 1].Y + Math.floor(Math.random() * 2 - 1) * 31) % (maxY - minY);           
-                var visible = Math.floor(Math.random() * 2);
-
-                if(visible == 0 && i != maxBlocks - 1) {
-                    var lastY = 0;
-                    for(var j = 1; j <= 4; ++j) 
-                        if(block[i - j].X != invisibleX) 
-                            lastY = block[i - j].Y;
-                    if(lastY != 0) {
-                        new_x = invisibleX;
-                        new_y = lastY;
-                    }
-                }
-
-                if(i == maxBlocks - 1)	
-                    block[i] = new Object('IMAGES/finish.jpg', new_x, new_y, 32, 31);
-                else
-                    block[i] = new Object('IMAGES/block.jpg', new_x, new_y, 32, 31);
-            }
-
-            var isLeft = false;
-            var isRight = false;
-            var isSpace = false;
-            player.Gravity = 20;
-            player.Weight = 0.08 ;
-
-            //EVENTS
-
-            var body = document.getElementById("body");
-
-            body.onkeydown = function(e) {
-                if(e.keyCode==37) isLeft = true;
-                if(e.keyCode==39) isRight = true;
-                if(e.keyCode==32) isSpace = true;
-            }
-
-            body.onkeyup = function(e) {
-                if(e.keyCode==37) isLeft = false;
-                if(e.keyCode==39) isRight = false;
-                if(e.keyCode==32) isSpace = false;
-            }
-
-            MainLoop();
-
-            function MainLoop() {
-                if(player.Y > 400) {
-                    theme.pause();
-        			death.play();
-                    setTimeout(play, 3000);
-                    return;
-                }
-
-                for(var i= 0; i < maxBlocks ; i++) {
-                    block[i].X -= player.Velocity_X;
-                }
-
-                player.Previous_Y = player.Y;
-                player.Y += player.Velocity_Y;
-
-                if(player.Velocity_Y < player.Gravity) 
-                    player.Velocity_Y += player.Weight;     
-
-                if(player.isCollidingVertically(block[maxBlocks - 1])) {
-                    theme.pause();
-        			victory.play();			
-                    gameCanvas.style.display = "none";
-                    victoryPenguin.style.display = "block";
-                    setTimeout(play, 10000);
-                    return;
-                }
-
-                for(var i = 0; i < maxBlocks; i++) {
-                    // check if player is on a block
-                    if(player.isCollidingVertically(block[i])) {
-
-                        player.Y = player.Previous_Y; 
-                        player.Velocity_Y = 0;
-                        break;           
-                    }        
-                }
-
-                if(isLeft) player.Velocity_X = -1.5;
-                if(isRight) player.Velocity_X = 1.5;   
-                if(!isLeft && !isRight && player.Velocity_Y == 0  ) player.Velocity_X = 0;    
-
-                player.Previous_X = player.X;
-                player.X += player.Velocity_X;
-
-                for(var i = 0; i < maxBlocks; i++) {
-                    // check if player would be colliding block[i]
-                    if(player.isCollidingHorizontally(block[i])) {
-
-                        player.Velocity_X = 0;        
-                    }
-                }
-
-                player.X = player.Previous_X;
-
-
-                if ( isSpace && player.Velocity_Y == 0 ) 
-                {
-                    player.Velocity_Y = -5;
-                    sndJump.play();
-                }    
-
-                grafx.clearRect(0, 0, gameCanvas.width, gameCanvas.height);  
-
-                for( var i = 0; i < maxBlocks; i ++) 
-                    grafx.drawImage( block[i].Sprite, block[i].X, block[i].Y );
-                grafx.drawImage( player.Sprite, player.X, player.Y );   
-
-                setTimeout(MainLoop,1000/690);    
-            }
-
-            function Object(img, x, y, width, height) {
-                this.Sprite = new Image()
-                this.Sprite.src = img;
-                this.X = x;
-                this.Y = y;
-                this.Width = width;
-                this.Height = height;
-                this.Previous_X = 0;
-                this.Previous_Y = 0;
-                this.Velocity_X = 0;
-                this.Velocity_Y = 0;
-                this.Gravity = 0;
-                this.Weight = 0;
-                this.epsilon = 10;
-
-                this.isCollidingHorizontally = function(obj) {
-                    if(this.Y + this.Height >= obj.Y && this.Y <= obj.Y || this.Y <= obj.Y + obj.Height && this.Y >= obj.Y) {            
-                        if(this.X + this.Width >= obj.X && this.X <= obj.X || this.X <= obj.X + obj.Width && this.X >= obj.X)
-                            return true;
-
-                    }
-
-                    return false;
-                }
-
-                this.isCollidingVertically = function(obj) {
-
-                    if(this.X + this.Width >= obj.X + this.epsilon && this.X <= obj.X || this.X <= obj.X + obj.Width - this.epsilon && this.X >= obj.X) {
-                        if(this.Y + this.Height > obj.Y && this.Y < obj.Y || this.Y < obj.Y + obj.Height && this.Y > obj.Y)
-                            return true;
-                    }
-                    return false;
-                }
-            }
-
-        }
-
-            function displayHelp() {
-                var help = document.getElementById("help");
-                if(help.innerHTML == "") {
-                    var text = "Use the left, right and up arrow keys to move.";
-                    help.style.backgroundColor = "white";
-                    help.style.fontSize = "1.5em";
-                    help.style.color = "blue";
-                    help.style.textAlign = "center";
-                    help.appendChild(document.createTextNode(text));
-                    var button = document.getElementById("demo");
-                }
-                else {
-                    help.style.display = "block";
-                }
-                demo.onclick = hideHelp;
-            }
-            function hideHelp() {
-                var help = document.getElementById("help");
-                help.style.display = "none";
-                demo.onclick = displayHelp;
-            }
-
-        </script>
 
         <div id = "help"></div>
     </body>
